==> FreeRTOS/Lab-Project-FreeRTOS-FAT/portable/ATSAM4E/ff_sddisk.c <==
#include <stdlib.h>
#include <string.h>
#include <stdarg.h>
#include <stdio.h>
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "portmacro.h"
#include "ff_sddisk.h"
#include "ff_sys.h"
#include <board.h>
#include <sd_mmc.h>
#include "hr_gettime.h"
#define sdSIGNATURE         0x41404342UL
#define sdHUNDRED_64_BIT    ( 100ull )
#define sdBYTES_PER_MB      ( 1024ull * 1024ull )
#define sdSECTORS_PER_MB    ( sdBYTES_PER_MB / 512ull )
#define sdIOMAN_MEM_SIZE    4096
#define xSDCardInfo         ( sd_mmc_cards[ 0 ] )
#define sdAligned( pvAddress )    ( ( ( ( size_t ) ( pvAddress ) ) & ( sizeof( size_t ) - 1 ) ) == 0 )
        #define sdMAX_TRANSFER_TIME    4000
    #define sdHSMCI_INTERRUPT_FLAGS \
    HSMCI_IER_NOTBUSY |             \
    HSMCI_IER_UNRE |                \
    HSMCI_IER_OVRE |                \
    HSMCI_IER_DTOE |                \
    HSMCI_IER_DCRCE |               \
    HSMCI_IER_TXBUFE |              \
    HSMCI_IER_RXBUFF |              \
    HSMCI_IER_XFRDONE
    #define sdMSMCI_USE_SEMAPHORE    1
#define ARRAY_SIZE( x )    ( int ) ( sizeof( x ) / sizeof( x )[ 0 ] )

static int32_t prvFFRead( uint8_t * pucBuffer,
                          uint32_t ulSectorNumber,
                          uint32_t ulSectorCount,
                          FF_Disk_t * pxDisk )
{
    int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG, lResult = pdFALSE;

    if( ( pxDisk != NULL ) &&
        ( xSDCardStatus == pdPASS ) &&
        ( pxDisk->ulSignature == sdSIGNATURE ) &&
        ( pxDisk->xStatus.bIsInitialised != pdFALSE ) &&
        ( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
        ( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
    {
        /* As the MCI driver is configured to use DMA, it must be tested that
         * the buffer is located in internal SRAM ("IRAM") and if it is 4-byte aligned. */
        if( sdAligned( pucBuffer ) && prvIsInternalRAM( pucBuffer ) )
        {
            lResult = sd_physical_read( ulSectorNumber, pucBuffer, ulSectorCount );
        }
        else
        {
            uint32_t ulSector;
            uint8_t * pucDMABuffer = ffconfigMALLOC( 512ul );

            /* The buffer is NOT word-aligned, read to an aligned buffer and then
             * copy the data to the user provided buffer. */
            if( pucDMABuffer != NULL )
            {
                for( ulSector = 0; ulSector < ulSectorCount; ulSector++ )
                {
                    lResult = sd_physical_read( ulSectorNumber + ulSector, pucDMABuffer, 1 );

                    if( lResult == pdFALSE )
                    {
                        break;
                    }

                    /* Copy to the user-provided buffer. */
                    memcpy( pucBuffer + 512ul * ulSector, pucDMABuffer, 512ul );
                }

                ffconfigFREE( pucDMABuffer );
            }
            else
            {
                FF_PRINTF( "prvFFRead: malloc failed\n" );
                lResult = pdFALSE;
            }
        }

        if( lResult != pdFALSE )
        {
            lReturnCode = 0L;
        }
        else
        {
            /* Some error occurred. */
            FF_PRINTF( "prvFFRead: %lu: %ld\n", ulSectorNumber, lResult );
        }
    }
    else
    {
        /* Make sure no random data is in the returned buffer. */
        memset( ( void * ) pucBuffer, '\0', ulSectorCount * 512UL );

        if( pxDisk->xStatus.bIsInitialised != pdFALSE )
        {
            FF_PRINTF( "prvFFRead: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors );
        }
    }

    return lReturnCode;
}

static int32_t prvFFWrite( uint8_t * pucBuffer,
                           uint32_t ulSectorNumber,
                           uint32_t ulSectorCount,
                           FF_Disk_t * pxDisk )
{
    int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG, lResult = pdFALSE;

    if( ( pxDisk != NULL ) &&
        ( xSDCardStatus == pdPASS ) &&
        ( pxDisk->ulSignature == sdSIGNATURE ) &&
        ( pxDisk->xStatus.bIsInitialised != pdFALSE ) &&
        ( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
        ( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
    {
        /* As the MCI driver is configured to use DMA, it must be tested that
         * the buffer is located in internal SRAM ("IRAM") and if it is 4-byte aligned. */
        if( sdAligned( pucBuffer ) && prvIsInternalRAM( pucBuffer ) )
        {
            lResult = sd_physical_write( ulSectorNumber, pucBuffer, ulSectorCount );
        }
        else
        {
            uint32_t ulSector;
            uint8_t * pucDMABuffer = ffconfigMALLOC( 512ul );

            /* The buffer is NOT word-aligned, read to an aligned buffer and then
             * copy the data to the user provided buffer. */
            if( pucDMABuffer != NULL )
            {
                for( ulSector = 0; ulSector < ulSectorCount; ulSector++ )
                {
                    /* Copy from the user provided buffer to the temporary buffer. */
                    memcpy( pucDMABuffer, pucBuffer + 512ul * ulSector, 512ul );
                    lResult = sd_physical_write( ulSectorNumber + ulSector, pucDMABuffer, 1 );

                    if( lResult == pdFALSE )
                    {
                        break;
                    }
                }

                ffconfigFREE( pucDMABuffer );
            }
            else
            {
                FF_PRINTF( "prvFFWrite: malloc failed\n" );
                lResult = pdFALSE;
            }
        }

        if( lResult != pdFALSE )
        {
            /* No errors. */
            lReturnCode = 0L;
        }
        else
        {
            FF_PRINTF( "prvFFWrite: %lu: %ld\n", ulSectorNumber, lResult );
        }
    }
    else
    {
        if( pxDisk->xStatus.bIsInitialised != pdFALSE )
        {
            FF_PRINTF( "prvFFWrite: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors );
        }
    }

    return lReturnCode;
}

FF_Disk_t * FF_SDDiskInit( const char * pcName )
{
    FF_Error_t xFFError;
    BaseType_t xPartitionNumber = 0;
    FF_CreationParameters_t xParameters;
    FF_Disk_t * pxDisk;

    #if ( ffconfigSDIO_DRIVER_USES_INTERRUPT != 0 )
        {
            NVIC_SetPriority( HSMCI_IRQn, configHSMCI_INTERRUPT_PRIORITY );
            NVIC_EnableIRQ( HSMCI_IRQn );
            #if ( sdMSMCI_USE_SEMAPHORE != 0 )
                {
                    if( xSDSemaphore == NULL )
                    {
                        xSDSemaphore = xSemaphoreCreateBinary();
                    }
                }
            #endif /* sdMSMCI_USE_SEMAPHORE */
        }
    #endif /* ffconfigSDIO_DRIVER_USES_INTERRUPT */

    xSDCardStatus = prvSDMMCInit( 0 );

    if( xSDCardStatus == pdPASS )
    {
        pxDisk = ( FF_Disk_t * ) ffconfigMALLOC( sizeof( *pxDisk ) );

        if( pxDisk != NULL )
        {
            /* Initialise the created disk structure. */
            memset( pxDisk, '\0', sizeof( *pxDisk ) );

            /* The Atmel MMC driver sets capacity as a number of KB.
             * Divide by two to get the number of 512-byte sectors. */
            pxDisk->ulNumberOfSectors = xSDCardInfo.capacity << 1;

            if( xPlusFATMutex == NULL )
            {
                xPlusFATMutex = xSemaphoreCreateRecursiveMutex();
            }

            pxDisk->ulSignature = sdSIGNATURE;

            if( xPlusFATMutex != NULL )
            {
                memset( &xParameters, '\0', sizeof( xParameters ) );
                xParameters.ulMemorySize = sdIOMAN_MEM_SIZE;
                xParameters.ulSectorSize = 512;
                xParameters.fnWriteBlocks = prvFFWrite;
                xParameters.fnReadBlocks = prvFFRead;
                xParameters.pxDisk = pxDisk;

                /* prvFFRead()/prvFFWrite() are not re-entrant and must be
                 * protected with the use of a semaphore. */
                xParameters.xBlockDeviceIsReentrant = pdFALSE;

                /* The semaphore will be used to protect critical sections in
                 * the +FAT driver, and also to avoid concurrent calls to
                 * prvFFRead()/prvFFWrite() from different tasks. */
                xParameters.pvSemaphore = ( void * ) xPlusFATMutex;

                pxDisk->pxIOManager = FF_CreateIOManger( &xParameters, &xFFError );

                if( pxDisk->pxIOManager == NULL )
                {
                    FF_PRINTF( "FF_SDDiskInit: FF_CreateIOManger: %s\n", ( const char * ) FF_GetErrMessage( xFFError ) );
                    FF_SDDiskDelete( pxDisk );
                    pxDisk = NULL;
                }
                else
                {
                    pxDisk->xStatus.bIsInitialised = pdTRUE;
                    pxDisk->xStatus.bPartitionNumber = xPartitionNumber;

                    if( FF_SDDiskMount( pxDisk ) == 0 )
                    {
                        FF_SDDiskDelete( pxDisk );
                        pxDisk = NULL;
                    }
                    else
                    {
                        if( pcName == NULL )
                        {
                            pcName = "/";
                        }

                        FF_FS_Add( pcName, pxDisk );
                        FF_PRINTF( "FF_SDDiskInit: Mounted SD-card as root \"%s\"\n", pcName );
                    }
                } /* if( pxDisk->pxIOManager != NULL ) */
            }     /* if( xPlusFATMutex != NULL) */
        }         /* if( pxDisk != NULL ) */
        else
        {
            FF_PRINTF( "FF_SDDiskInit: Malloc failed\n" );
        }
    } /* if( xSDCardStatus == pdPASS ) */
    else
    {
        FF_PRINTF( "FF_SDDiskInit: prvSDMMC_Init failed\n" );
        pxDisk = NULL;
    }

    return pxDisk;
}

static BaseType_t prvSDMMCInit( BaseType_t xDriveNumber )
{
    BaseType_t xReturn;

    /* 'xDriveNumber' not yet in use. */
    ( void ) xDriveNumber;

    /* Check if the SD card is plugged in the slot */
    if( prvSDDetect() == pdFALSE )
    {
        FF_PRINTF( "No SD card detected\n" );
        xReturn = pdFAIL;
    }
    else
    {
        FF_PRINTF( "HAL_SD_Init: type: %s Capacity: %lu MB\n",
                   xSDCardInfo.type & CARD_TYPE_HC ? "SDHC" : "SD",
                   ( xSDCardInfo.capacity << 1 ) / 2048 );

        xReturn = pdPASS;
    }

    return xReturn;
}
